.kubernetes/ingress/deployment_ingress_local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-rest-api-ingress
  namespace: test-a
  labels:
    app: "go-rest-api-ingress"
    version: "1.0"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: go-rest-api-ingress
  template:
    metadata:
      labels:
        app: go-rest-api-ingress
        version: "go-rest-api"
    spec:
      containers:
      - name: go-mock-api
        imagePullPolicy: Never
        image: go_rest_api_8901:latest
        resources:
           requests:
             cpu: 125m
             memory: 100Mi
           limits:
             cpu: 200m
             memory: 250Mi
        ports:
        - name: http
          containerPort: 8901
          protocol: TCP
        readinessProbe:
            httpGet:
              path: /ready
              port: http
              httpHeaders:
                - name: Custom-Header
                  value: Awesome
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 10
        livenessProbe:
            httpGet:
              path: /live
              port: http
              httpHeaders:
                - name: Custom-Header
                  value: Awesome
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 10
      terminationGracePeriodSeconds: 60
